# ops_diagnostic_agent

./: .gitignore  Makefile  README.md  audit.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  _langgraph_pydantic_patch.py  blob_store.py  checkpointer.py  config.py  database.py  graph.py  main.py  models.py  observability.py  registry.py  run_events.py  schemas.py  state.py  structured_logging.py
backend/app/agents/: __init__.py
backend/app/llm/: __init__.py  base.py  groq.py  langchain_base.py  ollama.py  openai.py  openai_compat.py
backend/app/parsers/: __init__.py  csv.py  docx.py  json.py  mbox.py  md.py  pdf.py  srt.py  txt.py  vtt.py  xlsx.py
backend/app/prompts/: __init__.py  _steering.py  bottleneck_detect.py  fastest_win_select.py  per_file_brief.py  review_summaries.py  roi_score.py  self_review_final.py  solution_blueprint.py  synthesis.py  workflow_map.py
backend/app/services/: __init__.py  files.py  runs.py
backend/evals/: __init__.py  diagnostics.py  funnel.py  loader.py  scorecard.py  structural.py
backend/evals/corpus/: __init__.py  build_corpus.py  manifest.json
backend/tests/: conftest.py  test_blob_store.py  test_database.py  test_models.py  test_schemas.py
backend/tests/fixtures/: __init__.py  call.srt  call.vtt  crm.json  inbox.mbox  leads.xlsx  make_fixtures.py  notes.md  notes.txt  sop.docx
backend/tests/integration/: __init__.py  conftest.py  test_agents_lead_diagnostic_chain.py  test_agents_lead_review.py  test_agents_lead_self_review.py  test_agents_lead_synthesis.py  test_agents_per_file_docx.py  test_agents_per_file_json.py  test_agents_per_file_markdown.py  test_agents_per_file_mbox.py  test_agents_per_file_pdf.py  test_agents_per_file_react.py  test_agents_per_file_table.py  test_agents_per_file_transcript.py  test_checkpointer.py  test_database.py  test_diagnostics_report.py  test_eval_scorecard.py  test_excerpt_api.py  test_excerpt_missing_blob.py  test_files_api.py  test_files_api_security.py  test_files_service.py  test_graph_resume.py  test_llm_groq_smoke.py  test_llm_ollama.py  test_llm_openai_compat.py  test_llm_openai_smoke.py  test_llm_silent_drop_guard.py  test_models.py  test_models_agents.py  test_models_cascade.py  test_per_file_convergence.py  test_run_context_persistence.py  test_run_context_steering_pivot.py  test_run_creation_user_context.py  (+3 more)
(+139 files in other folders)
