[project]
name = "ops-diagnostic-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "webvtt-py>=0.5",
  "srt>=3.5",
  "openai>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
