[project]
name = "ops-diagnostic-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "webvtt-py>=0.5",
  "srt>=3.5",
  "langchain-core>=1.4.0",
  "langchain-community>=0.4.0",
  "langgraph>=0.2.50",
  "langgraph-checkpoint-redis>=0.0.6",
  "rank-bm25>=0.2.2",
  "redis>=5.0",
  "langfuse>=2.50",
  "structlog>=24.4",
  "langchain>=1.0.0",
  "langchain-openai>=1.0.0",
  "langchain-ollama>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
